set(test_LIBRARIES ${pel_LIBRARIES} boost_unit_test_framework pel-logic pel-syntax pel-spaninterval)

add_executable(atomtest atomtest.cpp)
add_executable(cnftest cnftest.cpp)
add_executable(domaintest domaintest.cpp)
add_executable(follexertest follexertest.cpp)
add_executable(folparsertest folparsertest.cpp)
add_executable(liquidsamplertest liquidsamplertest.cpp)
add_executable(lrucachetest lrucachetest.cpp)
add_executable(mcsattest mcsattest.cpp)
add_executable(modeltest modeltest.cpp)
add_executable(movestest movestest.cpp)
add_executable(si_histogramtest si_histogramtest.cpp ${PROJECT_SOURCE_DIR}/src/si_histogram.cpp)
add_executable(spanintervaltest spanintervaltest.cpp)
add_executable(uptest uptest.cpp)

target_link_libraries(atomtest ${test_LIBRARIES})
target_link_libraries(cnftest ${test_LIBRARIES})
target_link_libraries(domaintest ${test_LIBRARIES})
target_link_libraries(follexertest ${test_LIBRARIES})
target_link_libraries(folparsertest ${test_LIBRARIES})
target_link_libraries(liquidsamplertest ${test_LIBRARIES})
target_link_libraries(lrucachetest ${test_LIBRARIES})
target_link_libraries(mcsattest ${test_LIBRARIES})
target_link_libraries(modeltest ${test_LIBRARIES})
target_link_libraries(movestest ${test_LIBRARIES})
target_link_libraries(si_histogramtest ${test_LIBRARIES})
target_link_libraries(spanintervaltest ${test_LIBRARIES})
target_link_libraries(uptest ${test_LIBRARIES})

add_test(atomtest atomtest)
add_test(cnftest cnftest)
add_test(domaintest domaintest)
add_test(follexertest follexertest)
add_test(folparsertest folparsertest)
add_test(liquidsamplertest liquidsamplertest)
add_test(lrucachetest lrucachetest)
add_test(mcsattest mcsattest)
add_test(modeltest modeltest)
add_test(movestest movestest)
add_test(si_histogramtest si_histogramtest)
add_test(spanintervaltest spanintervaltest)
add_test(uptest uptest)

