set(test_LIBRARIES ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_SERIALIZATION_LIBRARY} pel-logic pel-syntax pel-spaninterval)

add_executable(atomtest AtomTest.cpp)
add_executable(cnftest CNFTest.cpp)
add_executable(domaintest DomainTest.cpp)
add_executable(follexertest FOLLexerTest.cpp)
add_executable(folparsertest FOLParserTest.cpp)
add_executable(liquidsamplertest LiquidSamplerTest.cpp)
add_executable(lrucachetest LRUCacheTest.cpp)
add_executable(mcsattest MCSatTest.cpp)
add_executable(modeltest ModelTest.cpp)
add_executable(movestest MovesTest.cpp)
add_executable(si_histogramtest SIHistogramTest.cpp ${PROJECT_SOURCE_DIR}/src/SIHistogram.cpp)
add_executable(spanintervaltest SpanIntervalTest.cpp)
add_executable(uptest UPTest.cpp)
add_executable(utiltest UtilTest.cpp)

target_link_libraries(atomtest ${test_LIBRARIES})
target_link_libraries(cnftest ${test_LIBRARIES})
target_link_libraries(domaintest ${test_LIBRARIES})
target_link_libraries(follexertest ${test_LIBRARIES})
target_link_libraries(folparsertest ${test_LIBRARIES})
target_link_libraries(liquidsamplertest ${test_LIBRARIES})
target_link_libraries(lrucachetest ${test_LIBRARIES})
target_link_libraries(mcsattest ${test_LIBRARIES})
target_link_libraries(modeltest ${test_LIBRARIES})
target_link_libraries(movestest ${test_LIBRARIES})
target_link_libraries(si_histogramtest ${test_LIBRARIES})
target_link_libraries(spanintervaltest ${test_LIBRARIES})
target_link_libraries(uptest ${test_LIBRARIES})
target_link_libraries(utiltest ${test_LIBRARIES})

add_test(atomtest atomtest)
add_test(cnftest cnftest)
add_test(domaintest domaintest)
add_test(follexertest follexertest)
add_test(folparsertest folparsertest)
add_test(liquidsamplertest liquidsamplertest)
add_test(lrucachetest lrucachetest)
#add_test(mcsattest mcsattest)
add_test(modeltest modeltest)
add_test(movestest movestest)
add_test(si_histogramtest si_histogramtest)
add_test(spanintervaltest spanintervaltest)
add_test(uptest uptest)
add_test(utiltest utiltest)

